# bank-terminal-cli

./: .gitmodules  CMakeLists.txt  README.md  database.c  database.h  database_setup.c  main.c  terminal.c  terminal.h  types.h  utils.c  utils.h
tests/: utils.test.c
